# rust_wasm_frontend_rust

./: .gitignore  Cargo.toml  README.md  index.html
_temp_code_example_garbage/: main.rs
src/: main.rs
src/cookies/: mod.rs
src/extenal_source/: mod.rs  video.rs  video_detail.rs
src/pages/: get_from_backend.rs  home.rs  login.rs  mod.rs  not_found.rs  page_route.rs  second_page.rs  secure.rs  session_cookie_control.rs
src/router/: mod.rs
