# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust_wasm_frontend_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.16"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "^0.2"
web-sys = "0.3.58"
log = "0.4.6"
wasm-logger = "0.2.0"

gloo-net = "0.2"
